--- a/css/main.css
+++ b/css/main.css
@@ -86,8 +86,7 @@ body {
   transition: background-color 250ms var(--time--animation), color 250ms var(--time--animation);
 }
 
-.button:hover,
-.button:focus {
+.button:hover, .button:focus {
   background-color: var(--botton--color--hover);
   color: var(--text--color--white);
 }
@@ -106,12 +105,7 @@ body {
   transition: background-color 250ms var(--time--animation), color 250ms var(--time--animation), box-shadow 250ms var(--time--animation);
 }
 
-.button-menu:not(:last-child) {
-  margin-right: 8px;
-}
-
-.button-primary:hover,
-.button-primary:focus {
+.button-primary:hover, .button-primary:focus {
   color: var(--text--color);
   background-color: var(--backgraundcolor);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -132,8 +126,7 @@ body {
   transition: background-color 250ms var(--time--animation), color 250ms var(--time--animation), box-shadow 250ms var(--time--animation);
 }
 
-.button-secondary:hover,
-.button-secondary:focus {
+.button-secondary:hover, .button-secondary:focus {
   color: var(--text--color--white);
   background-color: var(--accent--color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -279,6 +272,7 @@ textarea::placeholder {
   border: 1px solid var(--text--color);
   cursor: pointer;
   margin-right: 8px;
+  border-radius: 4px;
 }
 
 .form-checkbox:checked + .form-checkbox-label::before {
@@ -300,54 +294,6 @@ textarea::placeholder {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.join-subscribe {
-  margin-left: 93px;
-}
-
-.form-subscribe {
-  display: flex;
-  justify-content: center;
-}
-
-.subscribe-input {
-  width: 358px;
-  height: 50px;
-  margin-right: 12px;
-  background-color: #2f303a;
-  font-size: 16px;
-  line-height: 1.25;
-  color: var(--text--color--white);
-  padding-left: 18px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-}
-
-.subscribe-input::placeholder {
-  font-size: 16px;
-  line-height: 1.25;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.subscribe-button {
-  display: flex;
-  align-items: center;
-  padding: 10px auto;
-}
-
-.subscribe-button::after {
-  display: inline-block;
-  content: "";
-  width: 24px;
-  height: 24px;
-  margin-left: 10px;
-  background-image: url(../images/icon-send.svg);
-  background-size: cover;
 }
 
 .modal {
@@ -384,8 +330,7 @@ textarea::placeholder {
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.modal-button:hover,
-.modal-button:focus {
+.modal-button:hover, .modal-button:focus {
   fill: var(--accent--color);
   transition: fill 250ms var(--time--animation);
 }
@@ -397,21 +342,18 @@ header {
   border-bottom: 1px solid #ececec;
 }
 
-.site-nav .link {
+.nav-link {
   color: var(--text--color);
   text-decoration: none;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-}
-
-.nav-link {
   position: relative;
   transition: color 250ms var(--time--animation);
 }
 
-.site-nav .link::before {
+.nav-link::before {
   content: "";
   position: absolute;
   display: block;
@@ -421,10 +363,9 @@ header {
   bottom: -32px;
   background-color: var(--accent--color);
   width: 0%;
-  /* transition: width 1000ms var(--time--animation); */
 }
 
-.site-nav .link.current::before {
+.nav-link.current::before {
   content: "";
   position: absolute;
   display: block;
@@ -434,7 +375,6 @@ header {
   bottom: -32px;
   background-color: var(--accent--color);
   width: 100%;
-  /* transition: width 100000ms var(--time--animation); */
 }
 
 .site-nav {
@@ -454,8 +394,9 @@ header {
   fill: currentColor;
 }
 
-.header-nav-link:not(:last-child) {
-  margin-right: 50px;
+.header-nav-link:focus .header-icon,
+.header-nav-link:hover .header-icon {
+  fill: var(--accent--color);
 }
 
 .link-icon {
@@ -467,14 +408,12 @@ header {
   transition: color 250ms var(--time--animation), fill 250ms var(--time--animation);
 }
 
-.header-nav-link:focus,
-.header-nav-link:hover {
-  color: var(--accent--color);
-  fill: var(--accent--color);
+.header-nav-link:not(:last-child) {
+  margin-right: 50px;
 }
 
-.header-nav-link:focus .header-icon,
-.header-nav-link:hover .header-icon {
+.header-nav-link:focus, .header-nav-link:hover {
+  color: var(--accent--color);
   fill: var(--accent--color);
 }
 
@@ -489,16 +428,16 @@ header {
   align-items: center;
 }
 
-.site-nav .link {
+.nav-link {
   transition: color 250ms var(--time--animation);
 }
 
-.site-nav .link:hover,
-.site-nav .link:focus {
+.nav-link:hover,
+.nav-link:focus {
   color: var(--accent--color);
 }
 
-.site-nav .link.current {
+.nav-link.current {
   color: var(--accent--color);
 }
 
@@ -527,10 +466,6 @@ header {
 .header-contact a:hover,
 .header-contact a:focus {
   color: var(--accent--color);
-}
-
-.footer-contacts .link {
-  text-decoration: none;
 }
 
 .hero {
@@ -657,7 +592,6 @@ header {
 }
 
 .our-team {
-  /* max-width: 1600px; */
   background-color: var(--backgraundcolor);
   margin-left: auto;
   margin-right: auto;
@@ -714,6 +648,11 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms var(--time--animation), fill 250ms var(--time--animation);
+}
+
+.social-link:hover, .social-link:focus {
+  background-color: var(--accent--color);
 }
 
 .social-icon {
@@ -722,28 +661,19 @@ header {
   fill: currentColor;
 }
 
-.social-list {
-  display: flex;
-  justify-content: center;
-}
-
-.social-link {
-  transition: background-color 250ms var(--time--animation), fill 250ms var(--time--animation);
-}
-
-/* .clients-link .social-icon {
-  transition: fill 5000ms var(--time--animation);
-} */
-.social-link:hover,
-.social-link:focus {
-  background-color: var(--accent--color);
-}
-
 .social-link:hover .social-icon,
 .social-link:focus .social-icon {
   fill: var(--main--backgraundcolor);
 }
 
+.social-list {
+  display: flex;
+  justify-content: center;
+}
+
+/* .clients-link .social-icon {
+  transition: fill 5000ms var(--time--animation);
+} */
 .clients {
   display: flex;
   flex-wrap: wrap;
@@ -751,7 +681,6 @@ header {
 }
 
 .clients-item {
-  /* width: 170px; */
   height: 100px;
   flex-basis: calc(100% / 6 - 30px);
   margin-right: 30px;
@@ -773,9 +702,12 @@ header {
   transition: border 250ms var(--time--animation);
 }
 
-.clients-link:hover,
-.clients-link:focus {
+.clients-link:hover, .clients-link:focus {
   border: 1px solid var(--accent--color);
+}
+
+.clients-icon {
+  fill: #afb1b8;
 }
 
 .clients-link .clients-icon {
@@ -787,10 +719,6 @@ header {
   width: 106px;
   height: 65px;
   fill: var(--accent--color);
-}
-
-.clients-icon {
-  fill: #afb1b8;
 }
 
 .footer {
@@ -808,6 +736,13 @@ header {
 
 .footer-contacts .link {
   color: var(--primary--text--color);
+  transition: color 250ms var(--time--animation);
+  text-decoration: none;
+}
+
+.footer-contacts .link .link:focus,
+.footer-contacts .link .link:hover {
+  color: var(--accent--color);
 }
 
 .footer-contacts-link {
@@ -822,23 +757,14 @@ header {
   font-style: normal;
 }
 
-.footer-contacts .link {
-  transition: color 250ms var(--time--animation);
+.address {
+  color: var(--text--color--white);
 }
 
-.footer .address {
-  transition: color 250ms var(--time--animation);
-}
-
-.footer-contacts .link:focus,
-.footer-contacts .link:hover,
 .footer .address:hover,
 .footer .address:focus {
   color: var(--accent--color);
-}
-
-.address {
-  color: var(--text--color--white);
+  transition: color 250ms var(--time--animation);
 }
 
 .join-title {
@@ -856,6 +782,14 @@ header {
   transition: background-color 250ms var(--time--animation);
 }
 
+.footer-social {
+  transition: background-color 250ms var(--time--animation);
+}
+
+.footer-social .social-link {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
 .footer-social .social-icon {
   fill: var(--main--backgraundcolor);
 }
@@ -865,13 +799,55 @@ header {
   background-color: var(--accent--color);
 }
 
-.join-right {
-  margin-left: 70px;
-}
-
 .footer-sections {
   display: flex;
   align-items: baseline;
+  justify-content: space-between;
+}
+
+.form-subscribe {
+  display: flex;
+  justify-content: center;
+}
+
+.subscribe-input {
+  width: 358px;
+  height: 50px;
+  margin-right: 12px;
+  background-color: #2f303a;
+  font-size: 16px;
+  line-height: 1.25;
+  color: var(--text--color--white);
+  padding-left: 18px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.subscribe-input::after {
+  display: inline-block;
+  content: "";
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
+  background-image: url(../images/icon-send.svg);
+  background-size: cover;
+}
+
+.subscribe-button {
+  display: flex;
+  align-items: center;
+  padding: 10px auto;
+}
+
+.subscribe-button::after {
+  display: inline-block;
+  content: "";
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
+  background-image: url(../images/icon-send.svg);
+  background-size: cover;
 }
 
 .join-left {
@@ -905,11 +881,6 @@ header {
   margin-bottom: 30px;
 }
 
-.projects-focus:hover .projects-card-text,
-.projects-focus:focus .projects-card-text {
-  transform: translateY(0);
-}
-
 .projects-card-wrap {
   position: relative;
   overflow: hidden;
@@ -929,13 +900,17 @@ header {
   background: rgba(33, 150, 243, 0.9);
 }
 
+.projects-focus:hover .projects-card-text,
+.projects-focus:focus .projects-card-text {
+  transform: translateY(0);
+}
+
 .projects-focus {
   display: block;
   transition: box-shadow 250ms var(--time--animation);
 }
 
-.projects-focus:focus,
-.projects-focus:hover {
+.projects-focus:focus, .projects-focus:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -960,5 +935,9 @@ header {
 .description {
   font-size: 16px;
   line-height: 1.88;
+}
+
+.button-menu:not(:last-child) {
+  margin-right: 8px;
 }
 /*# sourceMappingURL=main.css.map */
