--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -9,12 +9,14 @@
 
   transition: opacity 250ms var(--time--animation),
     visibility 250ms var(--time--animation);
+
+  &.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+  }
 }
-.backdrop.is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
-}
+
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0.8);
 }
