--- a/sass/components/_buttom__primary.scss
+++ b/sass/components/_buttom__primary.scss
@@ -13,14 +13,22 @@
 
   transition: background-color 250ms var(--time--animation),
     color 250ms var(--time--animation), box-shadow 250ms var(--time--animation);
+
+  &:hover,
+  &:focus {
+    color: var(--text--color);
+    background-color: var(--backgraundcolor);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
-.button-menu:not(:last-child) {
-  margin-right: 8px;
-}
-.button-primary:hover,
-.button-primary:focus {
-  color: var(--text--color);
-  background-color: var(--backgraundcolor);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
+// .button-menu:not(:last-child) {
+//   margin-right: 8px;
+// }
+// .button-primary:hover,
+// .button-primary:focus {
+//   color: var(--text--color);
+//   background-color: var(--backgraundcolor);
+//   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+//     0px 2px 2px rgba(0, 0, 0, 0.12);
+// }
