--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -15,27 +15,50 @@
 .benefits-item {
   flex-basis: calc(100% / 4 - 30px);
   margin-left: 30px;
+
+  &::before {
+    content: "";
+    display: block;
+    height: 120px;
+    margin-bottom: 30px;
+    background-size: 70px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: var(--backgraundcolor);
+  }
+  &:nth-child(1):before {
+    background-image: url(../images/antenna.svg);
+  }
+  &:nth-child(2):before {
+    background-image: url(../images/clock.svg);
+  }
+  &:nth-child(3):before {
+    background-image: url(../images/diagram.svg);
+  }
+  &:nth-child(4):before {
+    background-image: url(../images/astronaut.svg);
+  }
 }
 
-.benefits-item::before {
-  content: "";
-  display: block;
-  height: 120px;
-  margin-bottom: 30px;
-  background-size: 70px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: var(--backgraundcolor);
-}
-.benefits-item:nth-child(1):before {
-  background-image: url(../images/antenna.svg);
-}
-.benefits-item:nth-child(2):before {
-  background-image: url(../images/clock.svg);
-}
-.benefits-item:nth-child(3):before {
-  background-image: url(../images/diagram.svg);
-}
-.benefits-item:nth-child(4):before {
-  background-image: url(../images/astronaut.svg);
-}
+// .benefits-item::before {
+//   content: "";
+//   display: block;
+//   height: 120px;
+//   margin-bottom: 30px;
+//   background-size: 70px;
+//   background-repeat: no-repeat;
+//   background-position: center;
+//   background-color: var(--backgraundcolor);
+// }
+// .benefits-item:nth-child(1):before {
+//   background-image: url(../images/antenna.svg);
+// }
+// .benefits-item:nth-child(2):before {
+//   background-image: url(../images/clock.svg);
+// }
+// .benefits-item:nth-child(3):before {
+//   background-image: url(../images/diagram.svg);
+// }
+// .benefits-item:nth-child(4):before {
+//   background-image: url(../images/astronaut.svg);
+// }
