--- a/css/main.css
+++ b/css/main.css
@@ -740,31 +740,27 @@ header {
   text-decoration: none;
 }
 
-.footer-contacts .link .link:focus,
-.footer-contacts .link .link:hover {
-  color: var(--accent--color);
-}
-
 .footer-contacts-link {
   display: block;
+  font-style: normal;
+}
+
+.footer-contacts-link:hover, .footer-contacts-link:focus {
+  color: var(--accent--color);
 }
 
 .footer-contacts-link + .footer-contacts-link {
   margin-top: 9px;
 }
 
-.footer-contacts a {
-  font-style: normal;
-}
-
 .address {
+  font-style: normal;
   color: var(--text--color--white);
+  transition: color 250ms var(--time--animation);
 }
 
-.footer .address:hover,
-.footer .address:focus {
+.address:focus, .address:hover {
   color: var(--accent--color);
-  transition: color 250ms var(--time--animation);
 }
 
 .join-title {
@@ -775,11 +771,6 @@ header {
   text-transform: uppercase;
   margin-bottom: 20px;
   color: #ffffff;
-}
-
-.footer-social .social-link {
-  background-color: rgba(255, 255, 255, 0.1);
-  transition: background-color 250ms var(--time--animation);
 }
 
 .footer-social {
@@ -813,7 +804,6 @@ header {
 .subscribe-input {
   width: 358px;
   height: 50px;
-  margin-right: 12px;
   background-color: #2f303a;
   font-size: 16px;
   line-height: 1.25;
@@ -824,20 +814,20 @@ header {
   border-radius: 4px;
 }
 
-.subscribe-input::after {
-  display: inline-block;
-  content: "";
-  width: 24px;
-  height: 24px;
-  margin-left: 10px;
-  background-image: url(../images/icon-send.svg);
-  background-size: cover;
+.subscribe-input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .subscribe-button {
   display: flex;
   align-items: center;
   padding: 10px auto;
+  margin-left: 12px;
 }
 
 .subscribe-button::after {
