--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -13,37 +13,28 @@
   color: var(--primary--text--color);
   transition: color 250ms var(--time--animation);
   text-decoration: none;
-
-  & .link:focus,
-  & .link:hover {
-    color: var(--accent--color);
-  }
 }
 
 .footer-contacts-link {
   display: block;
+  font-style: normal;
+  &:hover,
+  &:focus {
+    color: var(--accent--color);
+  }
 }
 .footer-contacts-link + .footer-contacts-link {
   margin-top: 9px;
 }
-.footer-contacts a {
-  font-style: normal;
-}
 
-// .footer .address {
-//   transition: color 250ms var(--time--animation);
-// }
-// .footer-contacts .link:focus,
-// .footer-contacts .link:hover{
-//   color: var(--accent--color);
-// }
 .address {
+  font-style: normal;
   color: var(--text--color--white);
+  transition: color 250ms var(--time--animation);
 
-  .footer &:hover,
-  .footer &:focus {
+  &:focus,
+  &:hover {
     color: var(--accent--color);
-    transition: color 250ms var(--time--animation);
   }
 }
 .join-title {
@@ -56,14 +47,7 @@
 
   color: #ffffff;
 }
-.footer-social .social-link {
-  background-color: rgba(255, 255, 255, 0.1);
 
-  transition: background-color 250ms var(--time--animation);
-}
-// .footer-social .social-icon {
-//   fill: var(--main--backgraundcolor);
-// }
 .footer-social {
   & .social-link {
     background-color: rgba(255, 255, 255, 0.1);
@@ -79,12 +63,6 @@
     background-color: var(--accent--color);
   }
 }
-// }.social-link:hover,
-// .footer-social .social-link:focus {
-//   background-color: var(--accent--color);
-// }
-// // .join-right {
-// //   margin-left: 70px;
 
 .footer-sections {
   display: flex;
@@ -99,7 +77,7 @@
 .subscribe-input {
   width: 358px;
   height: 50px;
-  margin-right: 12px;
+
   background-color: #2f303a;
   font-size: 16px;
   line-height: 1.25;
@@ -111,30 +89,23 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
 
-  &::after {
-    display: inline-block;
-    content: "";
-    width: 24px;
-    height: 24px;
-    margin-left: 10px;
-    background-image: url(../images/icon-send.svg);
-    background-size: cover;
+  &::placeholder {
+    font-size: 16px;
+    line-height: 1.25;
+
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.03em;
+
+    color: rgba(255, 255, 255, 0.6);
   }
 }
-// .subscribe-input::placeholder {
-//   font-size: 16px;
-//   line-height: 1.25;
 
-//   display: flex;
-//   align-items: center;
-//   letter-spacing: 0.03em;
-
-//   color: rgba(255, 255, 255, 0.6);
-// }
 .subscribe-button {
   display: flex;
   align-items: center;
   padding: 10px auto;
+  margin-left: 12px;
 
   &::after {
     display: inline-block;
@@ -146,15 +117,7 @@
     background-size: cover;
   }
 }
-// .subscribe-button::after {
-//   display: inline-block;
-//   content: "";
-//   width: 24px;
-//   height: 24px;
-//   margin-left: 10px;
-//   background-image: url(../images/icon-send.svg);
-//   background-size: cover;
-// }
+
 .join-left {
   width: 231px;
 }
