--- a/css/main.css
+++ b/css/main.css
@@ -342,7 +342,7 @@ header {
   border-bottom: 1px solid #ececec;
 }
 
-.nav-link {
+.nav__link {
   color: var(--text--color);
   text-decoration: none;
   font-weight: 500;
@@ -353,7 +353,7 @@ header {
   transition: color 250ms var(--time--animation);
 }
 
-.nav-link::before {
+.nav__link::before {
   content: "";
   position: absolute;
   display: block;
@@ -365,7 +365,7 @@ header {
   width: 0%;
 }
 
-.nav-link.current::before {
+.nav__link.current::before {
   content: "";
   position: absolute;
   display: block;
@@ -377,68 +377,75 @@ header {
   width: 100%;
 }
 
-.site-nav {
+.nav__link:hover, .nav__link:focus {
+  color: var(--accent--color);
+}
+
+.nav__link.current {
+  color: var(--accent--color);
+}
+
+.nav__list {
   display: flex;
   align-items: center;
 }
 
-.header-nav {
+.nav {
   display: flex;
-  /* max-width: 1600px; */
   margin-left: auto;
   margin-right: auto;
 }
 
-.header-icon {
+.contact__icon {
   margin-right: 10px;
   fill: currentColor;
 }
 
-.header-nav-link:focus .header-icon,
-.header-nav-link:hover .header-icon {
+.nav__item:focus .contact__icon,
+.nav__item:hover .contact__icon {
   fill: var(--accent--color);
 }
 
-.link-icon {
+.contact__link {
   display: flex;
   align-items: center;
 }
 
-.header-nav-link {
+.nav__item {
   transition: color 250ms var(--time--animation), fill 250ms var(--time--animation);
 }
 
-.header-nav-link:not(:last-child) {
+.nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.header-nav-link:focus, .header-nav-link:hover {
+.nav__item:focus, .nav__item:hover {
   color: var(--accent--color);
   fill: var(--accent--color);
 }
 
-.header-contact {
+.contact {
   display: flex;
   margin-left: auto;
   align-items: center;
+}
+
+.contact__item {
+  transition: color 250ms var(--time--animation), fill 250ms var(--time--animation);
+}
+
+.contact__item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.contact__item:focus, .contact__item:hover {
+  color: var(--accent--color);
+  fill: var(--accent--color);
 }
 
 .header-conteiner {
   display: flex;
   align-items: center;
-}
-
-.nav-link {
-  transition: color 250ms var(--time--animation);
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--accent--color);
-}
-
-.nav-link.current {
-  color: var(--accent--color);
 }
 
 .logo {
@@ -454,7 +461,7 @@ header {
   color: var(--accent--color);
 }
 
-.header-contact a {
+.contact a {
   color: var(--primary--text--color);
   font-weight: 500;
   font-size: 14px;
@@ -463,8 +470,8 @@ header {
   transition: color 250ms var(--time--animation);
 }
 
-.header-contact a:hover,
-.header-contact a:focus {
+.contact a:hover,
+.contact a:focus {
   color: var(--accent--color);
 }
 
