--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,7 @@ header {
   padding-bottom: 24px;
   border-bottom: 1px solid #ececec;
 }
-.nav-link {
+.nav__link {
   color: var(--text--color);
   text-decoration: none;
   font-weight: 500;
@@ -38,64 +38,41 @@ header {
     background-color: var(--accent--color);
     width: 100%;
   }
+
+  &:hover,
+  &:focus {
+    color: var(--accent--color);
+  }
+  &.current {
+    color: var(--accent--color);
+  }
 }
-// .nav-link {
-//   position: relative;
 
-//   transition: color 250ms var(--time--animation);
-// }
-// .nav-link::before {
-//   content: "";
-//   position: absolute;
-//   display: block;
-//   width: 100%;
-//   height: 4px;
-//   border-radius: 4px;
-//   bottom: -32px;
-//   background-color: var(--accent--color);
-//   width: 0%;
-// }
-// .nav-link.current::before {
-//   content: "";
-//   position: absolute;
-//   display: block;
-//   width: 100%;
-//   height: 4px;
-//   border-radius: 4px;
-//   bottom: -32px;
-//   background-color: var(--accent--color);
-//   width: 100%;
-
-// }
-.site-nav {
+.nav__list {
   display: flex;
   align-items: center;
 }
-.header-nav {
+.nav {
   display: flex;
 
-  /* max-width: 1600px; */
   margin-left: auto;
   margin-right: auto;
 }
-.header-icon {
+.contact__icon {
   margin-right: 10px;
   fill: currentColor;
 
-  .header-nav-link:focus &,
-  .header-nav-link:hover & {
+  .nav__item:focus &,
+  .nav__item:hover & {
     fill: var(--accent--color);
   }
 }
-// .header-nav-link:not(:last-child) {
-//   margin-right: 50px;
-// }
 
-.link-icon {
+.contact__link {
   display: flex;
   align-items: center;
 }
-.header-nav-link {
+.nav__item {
   transition: color 250ms var(--time--animation),
     fill 250ms var(--time--animation);
 
@@ -110,36 +87,31 @@ header {
   }
 }
 
-// .header-nav-link:focus,
-// .header-nav-link:hover {
-//   color: var(--accent--color);
-//   fill: var(--accent--color);
-// }
-// .header-nav-link:focus .header-icon,
-// .header-nav-link:hover .header-icon {
-//   fill: var(--accent--color);
-// }
-
-.header-contact {
+.contact {
   display: flex;
   margin-left: auto;
   align-items: center;
+}
+
+.contact__item {
+  transition: color 250ms var(--time--animation),
+    fill 250ms var(--time--animation);
+
+  &:not(:last-child) {
+    margin-right: 50px;
+  }
+
+  &:focus,
+  &:hover {
+    color: var(--accent--color);
+    fill: var(--accent--color);
+  }
 }
 .header-conteiner {
   display: flex;
   align-items: center;
 }
-.nav-link {
-  transition: color 250ms var(--time--animation);
-}
 
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--accent--color);
-}
-.nav-link.current {
-  color: var(--accent--color);
-}
 .logo {
   color: var(--text--color);
   font-family: Raleway, sans-serif;
@@ -153,7 +125,7 @@ header {
   color: var(--accent--color);
 }
 
-.header-contact {
+.contact {
   & a {
     color: var(--primary--text--color);
     font-weight: 500;
@@ -169,7 +141,3 @@ header {
     color: var(--accent--color);
   }
 }
-// .header-contact a:hover,
-// .header-contact a:focus {
-//   color: var(--accent--color);
-// }
