--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,7 +3,7 @@
   padding-top: 60px;
   padding-bottom: 60px;
 }
-.footer .logo {
+.footer-logo {
   color: var(--text--color--white);
   display: inline-block;
   margin-right: 0px;
