--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -3,7 +3,7 @@
   margin-left: auto;
   margin-right: auto;
 }
-.form b {
+.form-title {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -28,18 +28,21 @@
   margin-top: 4px;
   resize: none;
   transition: border-color 250ms var(--time--animation);
-}
-.form-comment:focus {
-  outline: none;
-  border-color: var(--accent--color);
-}
-textarea::placeholder {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
 
-  color: rgba(117, 117, 117, 0.5);
+  &:focus {
+    outline: none;
+    border-color: var(--accent--color);
+  }
+
+  &::placeholder {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+
+    color: rgba(117, 117, 117, 0.5);
+  }
 }
+
 .form-checkbox-label {
   font-size: 14px;
   line-height: 1.71;
@@ -48,7 +51,7 @@ textarea::placeholder {
   margin-bottom: 30px;
 }
 
-.form-checkbox-label a {
+.form-link-agreement {
   color: var(--accent--color);
   margin-left: 5px;
 }
@@ -74,15 +77,13 @@ textarea::placeholder {
 
   padding-left: 42px;
   transition: border-color 250ms var(--time--animation);
+
+  &:focus {
+    outline: none;
+    border-color: var(--accent--color);
+  }
 }
-.form-input:focus {
-  outline: none;
-  border-color: var(--accent--color);
-}
-.form-input:focus ~ .form-icon {
-  fill: var(--accent--color);
-  transition: fill 250ms var(--time--animation);
-}
+
 .form-button {
   display: block;
   margin: 0 auto;
@@ -95,24 +96,13 @@ textarea::placeholder {
   top: 50%;
   left: 12px;
   transform: translateY(-50%);
+
+  .form-input:focus ~ & {
+    fill: var(--accent--color);
+    transition: fill 250ms var(--time--animation);
+  }
 }
-.form-checkbox-label::before {
-  display: block;
-  content: "";
-  width: 16px;
-  height: 15px;
-  border: 1px solid var(--text--color);
-  cursor: pointer;
-  margin-right: 8px;
-  border-radius: 4px;
-}
-.form-checkbox:checked + .form-checkbox-label::before {
-  background-image: url(../images/icon-check.svg);
-  border: none;
-}
-.form-checkbox:focus + .form-checkbox-label::before {
-  outline: 1px solid var(--text--color);
-}
+
 .form-wrapper {
   position: relative;
   display: block;
@@ -122,4 +112,23 @@ textarea::placeholder {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  &::before {
+    display: block;
+    content: "";
+    width: 16px;
+    height: 15px;
+    border: 1px solid var(--text--color);
+    cursor: pointer;
+    margin-right: 8px;
+    border-radius: 4px;
+
+    .form-checkbox:checked + &::before {
+      background-image: url(../images/icon-check.svg);
+      border: none;
+    }
+    .form-checkbox:focus + &::before {
+      outline: 1px solid var(--text--color);
+    }
+  }
 }
