--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import "components/section";
 @import "components/form";
 @import "components/modal";
+@import "logo";
 // layout
 @import "layout/header";
 @import "layout/hero";
